Fix issue of project name not showing in dark mode

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -352,6 +352,10 @@
 		@include tablet {
 			padding: 1rem 0;
 		}
+
+		@include dark {
+			color: $primary-black;
+		}
 	}
 
 	&__tools {
